# flurecon

./: Cargo.toml  LICENSE  Makefile
src/: cli.rs  logger.rs  main.rs  monitor.rs  privilege.rs
src/monitor/: config.rs  detection.rs  eviction.rs  flow.rs  host.rs  mod.rs  parsers.rs  types.rs
todo/: done.txt  infra.txt  test log.txt  todo.txt  todo.txt.save  todo.txt.save.1
