[package]
name = "flurecon"
version = "0.2.0"
edition = "2021"

[dependencies]
get_if_addrs  = "0.5"
pnet          = "0.34"
pcap          = "1.1"
etherparse    = "0.13"
clap          = { version = "4", features = ["derive"] }
serde         = { version = "1", features = ["derive"] }
serde_json    = "1"
chrono        = "0.4"
ctrlc         = { version = "3", features = ["termination"] }
dashmap = "6.1.0"
